<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LabaratornayOneFragment">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphView"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eylerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/eylerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphView" />

    <Button
        android:id="@+id/Rudekut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/rangekut2Btn"
        app:layout_constraintTop_toBottomOf="@+id/eylerBtn"
        tools:layout_editor_absoluteX="160dp" />

    <Button
        android:id="@+id/Rudekut2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="15dp"
        android:text="@string/rangekut4Btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rudekut"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextTextT"
        android:layout_width="129dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="T"
        app:layout_constraintEnd_toStartOf="@+id/editTextText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rudekut2" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="N"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rudekut2" />

</androidx.constraintlayout.widget.ConstraintLayout>